Fixed contact page header on smaller screens

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -59,7 +59,11 @@
 
 // Smartphones
 @include mediaSm {
-  body#main h1 {
-    margin-top: 10vh;
+  main#home h1 {
+    margin-top: 0;
+  }
+
+  h1.lg-heading {
+    font-size: 4.3rem;
   }
 }
